test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/array.widl
// Extracted from http://dev.w3.org/2006/webapi/WebIDL/ on 2011-05-06
// T[] is removed by https://github.com/heycam/webidl/commit/079cbb861a99e9e857a3f2a169c0beeb49cd020a
[Constructor]
interface LotteryResults {
  readonly attribute unsigned short[][] numbers;
};